Thu Aug 24 13:50:15 2000  Christopher Faylor <cgf@cygnus.com>

	* environ.cc (parse_thing): nobinmode should force O_TEXT.
	(regopt): Use correct path to find LOCAL_MACHINE registry options.
	* fhandler.cc (fhandler_base::open): Set binary mode only when binmode
	== O_BINARY.
	* pipe.cc (pipe): Pipe handling should rely on binmode not _fmode now
	that the two are different.

Thu Aug 24 13:21:09 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/cygwin.h (strace_printf_wrap): Force printing when
	_STRACE_SYSTEM.
	(strace_printf_wrap1): Ditto.

Thu Aug 24 12:30:17 2000  Christopher Faylor <cgf@cygnus.com>

	* debug.h: Allow some debug defines for use in header files.

Wed Aug 23 23:00:24 2000  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (dll_crt0_1): Move exception list and constructor stuff
	earlier in the process.  Use new second argument to set_myself.
	(cygwin_dll_init): Initialize exception list and constructor stuff
	here.
	(_dll_crt0): And here.  Also, deal with inherited pinfo shared memory
	region from parent.
	* pinfo.cc (set_myself): Accept a second argument signifying the a
	shared memory region, passed from an execing parent.
	(pinfo_init): Ditto.
	* pinfo.h: Ditto.
	* shared.h (child_info): Add a handle field to pass to child.
	* spawn.cc (spawn_guts): Create a shared handle to pass to an execed
	child.
	* winsup.h: Remove extraneous declaration.

Wed Aug 23 10:51:57 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/cygwin.h: Protect class definitions.

Tue Aug 22 13:57:36 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (symlink_info::check): Clear error on each iteration of
	extension check.

Tue Aug 22 11:23:59 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Don't include '.d' file if there are none generated yet.

Tue Aug 22 11:08:11 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/cygwin.h: Declare some thread classes.
	* include/mntent.h: Avoid declaring functions.
